--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -6,6 +6,7 @@ html(lang='ru')
 	head
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+		//meta(name='viewport', content='width=device-width')
 		meta(name='description', content='')
 		meta(name='author', content='')
 		link(rel='stylesheet', href='css/normalize.css')
@@ -26,10 +27,10 @@ html(lang='ru')
 		section.content.section
 			.container
 				.row
-					.d-none.d-sm-block.col-sm-3
+					.d-none.d-md-block.col-md-3
 						.aside-wrap#aside
 							include _aside
-					.col-12.col-sm-9
+					.col-12.col-md-9
 						.content-group
 							//- block vars
 							
