--- a/pug/modules/_header.pug
+++ b/pug/modules/_header.pug
@@ -143,10 +143,14 @@ header.header
 							i.icon-arrow-down
 					.header-button-inn.button-inn
 						button.header-button.button.button-help помощь
-						button#header-navControl.header-button.button.active(data-toggle='collapse', data-target='#header-nav', aria-expanded='false', aria-controls='header-nav') Системы
+						button#header-navControl.header-button.button.active(data-toggle='collapse', data-target='#header-nav') Системы
 						button#btnDeploy.header-button.button.button-deploy Развернуть
 						// <button id="btnToTop" class="header-button button button-toTop">Наверх</button>
 						// /.header-box
+						button.button-burger(data-toggle='collapse', data-target='#menu-nav-headerGroup', type='button')
+							span
+							span
+							span
 		nav.header-nav-system
 			#header-nav.header-nav-system-wrap.collapse.show
 				.row.align-items-center
