--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -233,8 +233,10 @@
 			flex-wrap: wrap;
 			padding-top: 0;
 		}
-		@include xs-block {
+		@media (max-width: 767px){
 			display: none;
+		}
+		@include sm-block {
 		}
 		&-wrap {
 			@include lg-block {
