--- a/sass/_widget-calendar.scss
+++ b/sass/_widget-calendar.scss
@@ -8,7 +8,7 @@
 		padding: 10px;
 		height: 190px;
 	}
-	@include sm-block {
+	@include md-block {
 		height: 150px;
 	}
 	// &-change {
@@ -65,7 +65,7 @@
 	.ui-datepicker-calendar {
 		td {
 			padding: 2.5px;
-			@include sm-block {
+			@include md-block {
 				padding: 1px;
 			}
 		}
@@ -89,7 +89,7 @@
 		@include lg-block {
 			font-size: 11px;
 		}
-		@include sm-block {
+		@include md-block {
 			font-size: 8px;
 		}
 	}
@@ -100,7 +100,7 @@
 		@include lg-block {
 			font-size: 8px;
 		}
-		@include sm-block {
+		@include md-block {
 			font-size: 6px;
 		}
 	}
@@ -143,7 +143,7 @@
 	display: none;
 	height: 125px;
 	margin-top: -5px;
-	@include sm-block {
+	@include md-block {
 		height: 100px;
 	}
 }
@@ -166,7 +166,7 @@
 		@include lg-block {
 			font-size: 16px;
 		}
-		@include sm-block {
+		@include md-block {
 			font-size: 9px;
 			line-height: 1.4;
 			margin-bottom: 5px;
