--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -90,7 +90,7 @@
 	text-transform: capitalize;
 	border-radius: 5px;
 	transition: 0.5s;
-	@include sm-block {
+	@include md-block {
 		font-size: 12px;
 		&:not([class*='button-more-']).button-more {
 			font-size: 12px;
@@ -222,7 +222,7 @@
 		background-color: #FFFFFF;
 		color: #797C82;
 	}
-	@include sm-block {
+	@include md-block {
 		font-size: 12px;
 	}
 
@@ -265,7 +265,7 @@
 		height: 100%;
 		margin-left: -3px;
 		margin-top: -2px;
-		@include sm-block {
+		@include md-block {
 			text-align: center;
 		}
 	}
@@ -293,7 +293,7 @@
 	@include lg-block {
 		font-size: 8px;
 	}
-	@include sm-block {
+	@include md-block {
 		max-width: 79px;
 		overflow: hidden;
 		white-space: nowrap;
