--- a/pug/blocks.pug
+++ b/pug/blocks.pug
@@ -3,7 +3,7 @@ block vars
 	- var pageTitle = 'Комбинированные блоки';
 block content
 	- var pageTitle = 'Комбинированные блоки';
-	include page/_page-special-title
+	//include page/_page-special-title
 
 	include blocks/_block-imgl-text
 
