--- a/pug/modules/_header.pug
+++ b/pug/modules/_header.pug
@@ -147,74 +147,72 @@ header.header
 						button#btnDeploy.header-button.button.button-deploy Развернуть
 						// <button id="btnToTop" class="header-button button button-toTop">Наверх</button>
 						// /.header-box
-						button.button-burger(data-toggle='collapse', data-target='#menu-nav-headerGroup', type='button')
-							span
-							span
+						button.button-burg.margin-left-20(data-toggle='collapse', data-target='#menu-nav-headerGroup', type='button')
 							span
 		nav.header-nav-system
 			#header-nav.header-nav-system-wrap.collapse.show
 				.row.align-items-center
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-book
 							.header-nav-system__link
 								span DOCS SAP
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-aircraft
 							.header-nav-system__link
 								span Реестр МИГ
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-barcode
 							.header-nav-system__link
 								span SAP
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-stat
 							.header-nav-system__link
 								span SAP PHR
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-production
 							.header-nav-system__link
 								span SAP PHR
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-chess
 							.header-nav-system__link
 								span СААРЦ
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-list
 							.header-nav-system__link
 								span NORMAL System 102
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-box
 							.header-nav-system__link
 								span Abnormal System 3367
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-production
 							.header-nav-system__link
 								span Стандарты РосКосмос
-					.col-md-1
+					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
 							.header-nav-system-icon-box
 								i.icon-money
 							.header-nav-system__link
 								span РОСТЕХ
-					.col-md-2.d-table
+					.col-12.col-md-2.d-table
 						.button-more-inn.header-button-inn.button-inn
 							.nav-more.btn-group
 								button#header-navMore.button.header-button.button-more.button-more-lg-min.button-more-xl-full(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
