--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -386,9 +386,13 @@
 		margin-bottom: 15px;
 		padding-right: 15px;
 		box-sizing: content-box;
+		@include md-block {
+			padding-right: 8px;
+		}
 		&:nth-child(5n) {
 			padding-right: 0;
 		}
+
 		&__imgbox {
 			display: inline-block;
 			width: 162px;
@@ -399,6 +403,11 @@
 			border: 1px solid #dddee0;
 			padding: 15px;
 			text-align: center;
+			@include md-block {
+				width: 96px;
+				height: 72px;
+				line-height: 36px;
+			}
 			img {
 				vertical-align: middle;
 			}
@@ -1018,6 +1027,12 @@
 		font-weight: inherit;
 		transition: color 0.2s;
 		font-family: "PT Serif", serif;
+		@include md-block {
+			font-size: 16px;
+		}
+		@include sm-block {
+			font-size: 12px;
+		}
 		&.color-thin {
 			color: #a1a3a7;
 		}
