--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -31,6 +31,9 @@
 			color: inherit;
 			font-weight: 400;
 			font-size: 32px;
+			@include md-block {
+				font-size: 22px;
+			}
 		}
 		&_specialtitle {
 			h1, h2, h3, h4, h5, p, div, span {
@@ -38,6 +41,9 @@
 				// margin-bottom: 25px;
 				font-family: "Roboto", sans-serif;
 				font-weight: 700;
+				@include lg-block {
+					margin-top: 0;
+				}
 			}
 		}
 		&_dark {
