--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -47,6 +47,10 @@
 		padding-top: 15px;
 		padding-bottom: 0;
 	}
+	@include xs-block {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
 	@include before {
 		top: 10px;
 		bottom: 9px;
@@ -64,12 +68,15 @@
 		@include lg-block {
 			opacity: 1;
 			max-width: 990px;
+			width: calc(100% - 30px);
 		}
-		@include md-block {
+		@include sm-block {
 			max-width: 720px;
+
 		}
 		@include xs-block {
-			max-width: 560px;
+			max-width: 100%;
+			width: calc(100% - 30px);
 		}
 	}
 	// & + .content {
@@ -85,17 +92,24 @@
 		@include lg-block {
 			align-items: center;
 		}
+		@include xs-block {
+			flex-wrap: nowrap;
+		}
 		&__item {
+			padding: 0 15px;
 			@include md-block {
 				width: auto;
 				flex: auto;
 				max-width: none;
 			}
+			@include xs-block {
+				padding: 0 8px;
+			}
 		}
 		&__logo {
 			display: flex;
 			align-items: center;
-			padding: 0 15px;
+			//padding: 0 15px;
 			width: 100%;
 			flex: 0 0 25%;
 			max-width: 25%;
@@ -103,9 +117,12 @@
 				flex: 0 0 38.73%;
 				max-width: 38.73%;
 			}
+			@include xs-block {
+				padding-left: 15px;
+			}
 		}
 		&__question {
-			padding: 0 15px;
+			//padding: 0 15px;
 			width: 100%;
 			flex: 0 0 16.66667%;
 			max-width: 16.66667%;
@@ -115,7 +132,7 @@
 			}
 		}
 		&__search {
-			padding: 0 15px;
+			//padding: 0 15px;
 			width: 100%;
 			flex: 0 0 33.33333%;
 			max-width: 33.33333%;
@@ -131,7 +148,7 @@
 			display: flex;
 			flex-wrap: wrap;
 			align-items: center;
-			padding: 0 15px;
+			//padding: 0 15px;
 			width: 100%;
 			flex: 0 0 25%;
 			max-width: 25%;
@@ -139,11 +156,17 @@
 				flex: 0 0 28.81%;
 				max-width: 28.81%;
 			}
+			@include xs-block {
+				padding-right: 15px;
+			}
 		}
 	}
 	&-logowrap {
 		min-width: 82px;
 		margin-right: 15px;
+		@include sm-block {
+			margin-right: 0;
+		}
 	}
 	&-logo {
 		display: block;
@@ -212,6 +235,12 @@
 		@include md-block {
 			margin-left: -15px;
 		}
+		@include sm-block {
+			margin-left: 0;
+			margin-bottom: 0;
+			max-width: 60px;
+			font-size: 8px;
+		}
 		a {
 			font-size: 13px;
 			line-height: 16px;
@@ -221,6 +250,10 @@
 				br {
 					display: none;
 				}
+			}
+			@include sm-block {
+				font-size: 8px;
+				line-height: 1.4;
 			}
 		}
 	}
@@ -308,6 +341,10 @@
 			position: static;
 			padding-bottom: 15px;
 			padding-top: 0;
+		}
+		@include xs-block {
+			margin-top: -5px;
+			padding-bottom: 10px;
 		}
 		&-wrap{
 			position: relative;
